apps/infra/immich/base/deploy-ml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  labels:
    app.kubernetes.io/component: machine-learning
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: machine-learning
  template:
    metadata:
      labels:
        app.kubernetes.io/component: machine-learning
    spec:
      nodeSelector:
        kubernetes.io/hostname: rpinode1
      containers:
      - name: immich-machine-learning
        image: ghcr.io/immich-app/immich-machine-learning
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3003
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 30
          periodSeconds: 20
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 5
        volumeMounts:
        - name: model-cache
          mountPath: /cache
      volumes:
      - name: model-cache
        persistentVolumeClaim:
          claimName: immich-model-cache
