apps/infra/immich/base/deploy-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  labels:
    app.kubernetes.io/component: redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: redis
  template:
    metadata:
      labels:
        app.kubernetes.io/component: redis
    spec:
      nodeSelector:
        kubernetes.io/hostname: rpinode1
      containers:
      - name: redis
        image: docker.io/valkey/valkey
        imagePullPolicy: IfNotPresent
        args:
        - redis-server
        - --save
        - ""
        - --appendonly
        - "no"
        ports:
        - name: redis
          containerPort: 6379
          protocol: TCP
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 3
