apps/infra/immich/base/deploy-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  labels:
    app.kubernetes.io/component: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/component: server
    spec:
      nodeSelector:
        kubernetes.io/hostname: rpinode1
      containers:
      - name: immich-server
        image: ghcr.io/immich-app/immich-server
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 2283
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /api/server/ping
            port: http
          initialDelaySeconds: 30
          periodSeconds: 15
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /api/server/ping
            port: http
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 5
        volumeMounts:
        - name: library
          mountPath: /data
      volumes:
      - name: library
        persistentVolumeClaim:
          claimName: immich-library
