apps/infra/immich/base/svc-ml.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  labels:
    app.kubernetes.io/component: machine-learning
spec:
  selector:
    app.kubernetes.io/component: machine-learning
  ports:
  - name: http
    port: 3003
    targetPort: http
