apps/infra/immich/base/svc-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  labels:
    app.kubernetes.io/component: postgres
spec:
  selector:
    app.kubernetes.io/component: postgres
  ports:
  - name: postgres
    port: 5432
    targetPort: postgres
