apps/infra/immich/base/svc-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  labels:
    app.kubernetes.io/component: redis
spec:
  selector:
    app.kubernetes.io/component: redis
  ports:
  - name: redis
    port: 6379
    targetPort: redis
